[package]
name = "rusty_code"
version = "0.1.0"
edition = "2024"
authors = ["Jonas Heinle <contact@jonasheinle.de>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
lto = "thin"
codegen-units = 1
